tests/ui/enum/enum-variant-generic-args-in-module-segment.stderr
error[E0109]: type arguments are not allowed on module `module`
  --> $DIR/enum-variant-generic-args-in-module-segment.rs:14:22
   |
LL |     let _ = module::<i32>::Variant;
   |             ------   ^^^ type argument not allowed
   |             |
   |             not allowed on module `module`

error[E0109]: type arguments are not allowed on module `module`
  --> $DIR/enum-variant-generic-args-in-module-segment.rs:17:28
   |
LL |     let _ = self::module::<()>::Variant {};
   |                   ------   ^^ type argument not allowed
   |                   |
   |                   not allowed on module `module`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0109`.
